fix: prevent layout breaking due to excessive content height

--- a/src/components/grid/styles/grid.module.css
+++ b/src/components/grid/styles/grid.module.css
@@ -1,13 +1,21 @@
 .container {
     display: grid;
     grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto auto minmax(20px, 1fr);
     grid-template-areas:
         'top-row top-row top-row'
         'start-column center-column-top end-column'
         'start-column center-column-bottom end-column';
     height: 100%;
 }
+.topRow,
+.startColumn,
+.centerColumnTop,
+.centerColumnBottom,
+.endColumn {
+    overflow: hidden;
+}
+
 .topRow {
     grid-area: top-row;
 }
